--- a/doc/manual/R-FAQ.texi
+++ b/doc/manual/R-FAQ.texi
@@ -3510,10 +3510,10 @@ Before you actually submit a bug report, you should check whether the
 bug has already been reported and/or fixed.  First, try the ``Search
 Existing Reports'' facility in the Bug Tracking page at
 @url{http://bugs.R-project.org/}.  Second, consult
-@url{https://svn.R-project.org/R/trunk/NEWS}, which records changes that
-will appear in the @emph{next} release of R, including some bug fixes
-that do not appear in Bug Tracking.  (Windows users should additionally
-consult
+@url{https://svn.R-project.org/R/trunk/src/NEWS.Rd}, which records
+changes that will appear in the @emph{next} release of R, including some
+bug fixes that do not appear in Bug Tracking.  (Windows users should
+additionally consult
 @url{https://svn.R-project.org/@/R/@/trunk/@/src/@/gnuwin32/@/CHANGES}.)
 Third, if possible try the current r-patched or r-devel version of R.
 If a bug has already been reported or fixed, please do not submit
