--- a/doc/manual/R-data.texi
+++ b/doc/manual/R-data.texi
@@ -1329,15 +1329,16 @@ Windows provides drivers not just for DBMSs but also for Excel
 (@file{.xls}) spreadsheets, DBase (@file{.dbf}) files and even text
 files.  (The named applications do @emph{not} need to be
 installed. Which file formats are supported depends on the the versions
-of the drivers.)  There are versions for Excel 2007 and Access 2007 (go
+of the drivers.)  There are versions for Excel and Access 2007/2010 (go
 to @uref{http://download.microsoft.com}, and search for `Office ODBC',
 which will lead to @file{AccessDatabaseEngine.exe}), the `2007 Office
-System Driver'.
+System Driver' (the latter has a version for 64-bit Windows, and that
+will also read earlier versions).
 
 On Mac OS X the Actual Technologies
 (@url{http://www.actualtechnologies.com/product_access.php}) drivers
-provide ODBC interfaces to Access databases (including Access 2007) and
-to Excel spreadsheets.
+provide ODBC interfaces to Access databases (including Access 2007/2010)
+and to Excel spreadsheets (not including Excel 2007/2010).
 
 @findex odbcConnect
 @findex odbcDriverConnect
@@ -2112,9 +2113,8 @@ project at @uref{http://www.omegahat.org/RSCORBA/}.
 The most common R data import/export question seems to be `how do I read
 an Excel spreadsheet'.  This chapter collects together advice and
 options given earlier.  Note that most of the advice is for pre-Excel
-2007 spreadsheets: currently the only one of these methods that reads
-the @file{.xlsx} format is that @emph{via} @pkg{RODBC}, but see also the
-Omegahat package @pkg{RExcelXML}.
+2007 spreadsheets: currently the only one of these methods that also reads
+the @file{.xlsx} format is that @emph{via} @pkg{RODBC}.
 
 @findex read.csv
 @findex read.delim
@@ -2146,14 +2146,15 @@ and may be confused by other contents of the file.
 
 @findex odbcConnectExcel
 @findex odbcConnectExcel2007
-Windows users can use @code{odbcConnectExcel} in package @pkg{RODBC}.
-This can select rows and columns from any of the sheets in an Excel
-spreadsheet file (at least from Excel 97--2003, depending on your ODBC
-drivers: by calling @code{odbcConnect} directly versions back to Excel
-3.0 can be read).  The version @code{odbcConnectExcel2007} will read the
-Excel 2007 formats as well as earlier ones (provided the drivers are
-installed: @pxref{RODBC}).  Mac users can also use @pkg{RODBC} if they
-have a suitable driver (e.g.@: that from Actual Technologies).
+Windows users (of 32-bit @R{}) can use @code{odbcConnectExcel} in
+package @pkg{RODBC}.  This can select rows and columns from any of the
+sheets in an Excel spreadsheet file (at least from Excel 97--2003,
+depending on your ODBC drivers: by calling @code{odbcConnect} directly
+versions back to Excel 3.0 can be read).  The version
+@code{odbcConnectExcel2007} will read the Excel 2007 formats as well as
+earlier ones (provided the drivers are installed, including with 64-bit
+Windows @R{}: @pxref{RODBC}).  Mac users can also use @pkg{RODBC} if
+they have a suitable driver (e.g.@: that from Actual Technologies).
 
 @findex read.xls
 @code{Perl} users have contributed a module
@@ -2173,6 +2174,12 @@ Packages @pkg{dataframes2xls} and @pkg{WriteXLS} each contain a function
 to @emph{write} one or more data frames to an @file{.xls} file, using
 Python and Perl respectively.  Another version of @code{write.xls} in
 available in package @pkg{xlsReadWrite}.
+
+@findex xlsx
+@findex RExcelXML
+Two packages which can read and and manipulate Excel 2007/10 spreadsheets but not earlier
+formats are @pkg{xlsx} (which requires Java) and the Omegahat package
+@pkg{RExcelXML}.
 
 
 @node References, Function and variable index, Reading Excel spreadsheets, Top
