--- a/share/texmf/tex/latex/Rd.sty
+++ b/share/texmf/tex/latex/Rd.sty
@@ -190,6 +190,10 @@
 {\newcommand{\link}[1]{\hyperlink{Rfn.#1}{#1}\index{#1@\texttt{#1}}}}
 {\newcommand{\link}[1]{#1\index{#1@\texttt{#1}}}}
 
+\ifthenelse{\boolean{Rd@use@hyper}}
+{\newcommand{\Rhref}[2]{\href{#1}{#2}}}
+{\newcommand{\Rhref}[2]{#2\footnote{\url{#1}}}}
+
 %% as from R 2.10.0 set \email in monospaced font (like \url)
 %\newcommand{\email}[1]{$\langle$\texttt{#1}$\rangle$}
 \newcommand{\email}[1]{\normalfont\texttt{\textless#1\textgreater}}
