--- a/share/texmf/tex/latex/Rd.sty
+++ b/share/texmf/tex/latex/Rd.sty
@@ -184,6 +184,7 @@
 \newcommand{\deqn}[2]{\[#1\]}
 \newcommand{\eqn}[2]{$#1$}
 \newcommand{\bold}[1]{\ifmmode\bm{#1}\else\textbf{#1}\fi}
+%% as from R 2.12.0 set \file in monospaced font, not sans-serif
 \newcommand{\file}[1]{`\texttt{#1}'}
 
 \ifthenelse{\boolean{Rd@use@hyper}}
