--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -1210,8 +1210,9 @@ An alternative way to customize the installer starting with a binary
 distribution is to first make a full installation of R from the standard
 installer (that is, select @samp{Full Installation} from the
 @samp{Select Components} screen), then add packages and make other
-customizations to that installation.  Then in
-@file{src/gnuwin32/installer} run
+customizations to that installation.  Then (after having customized file
+@file{MkRules}, possibly @emph{via} @file{MkRules.local}, and having
+made R in the source tree) in @file{src/gnuwin32/installer} run
 
 @example
 make myR IMAGEDIR=rootdir
@@ -1219,7 +1220,7 @@ make myR IMAGEDIR=rootdir
 
 @noindent
 where @file{rootdir} is the path to the root of the customized
-installation (forward slashes and no spaces, please).  
+installation (in double quotes if it contains spaces or backslashes).
 
 Both methods create an executable with a standard name such as
 @file{@value{RWVERSION}-win.exe}, so please rename it to indicate that
