--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -2449,7 +2449,7 @@ versions (including looking in @file{/usr/xpg4/bin} which is used on
 some commercial Unixes).
 
 You will not be able to build most of the manuals unless you have
-@command{makeinfo} version 4.7 or later installed , and if not some of
+@command{makeinfo} version 4.7 or later installed, and if not some of
 the @HTML{} manuals will be linked to @acronym{CRAN}.  (Version 4.6 is
 known to create incorrect @HTML{} files.)  To make DVI or PDF versions
 of the manuals you will also need file @file{texinfo.tex} installed
@@ -2517,8 +2517,8 @@ Roman and Courier New, and contain fonts rather similar to the first two
 The bitmapped graphics devices @code{jpeg()}, @code{png()} and
 @code{tiff()} need the appropriate headers and libraries installed:
 @code{jpeg} (version 6b or later) or @code{libpng} (version 1.2.3 or
-later, including 1.4.0) and @code{zlib} (version 1.1.3 or later) or
-@code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.1 have been
+later, including 1.4.x) and @code{zlib} (version 1.1.3 or later) or
+@code{libtiff} (any recent version of 3.x.y -- 3.8.2 and 3.9.[124] have been
 tested) respectively.
 
 If you have them installed (including the appropriate headers and of
