port r52534 (and before) from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52535 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -25,6 +25,10 @@ BUG FIXES
 	not as Vista), and Sys.info() now reports the machine type as
 	'x86-64' on 64-bit platforms.
 
+    o	serialize() to a raw vector works around the dismal performance
+      	of Windows' memory manager by allocating much larger chunks of
+      	memory less frequently.
+
 
 
     		CHANGES IN R VERSION 2.11.1
